--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>This is my New Website</h1>
+        <h2> Added H2 </h2>
         Hello World!
     </body>
 </html>
