--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1>This is my New Website</h1>
+        <h1 style = "color : blue">This is my New Website</h1>
         <h2> Added H2 </h2>
         Hello World!
     </body>
